2007-04-23  David Lawrence Ramsey  <pooka109@gmail.com>

	* TODO: Add entries for fixing limitations with pasting text and
	handling bad/incomplete UTF-8 sequences.

2007-04-22  David Lawrence Ramsey  <pooka109@gmail.com>

	* text.c (backup_lines): Avoid a segfault when the mark begins
	and ends on the line after the last line of the paragraph.

2007-04-21  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (do_writeout): If we're in restricted mode, we're not
	allowed to write selections to files, so don't display the
	"Write Selection to File" prompt.
	* files.c (do_writeout): Simplify.

2007-04-19  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (tail): Remove unneeded if statement.

2007-04-18  John M. Gabriele  <jmg3000@gmail.com>

	* doc/faq.html: Add a new section 4.14 (with minor tweaks by
	David Lawrence Ramsey) to explain how autoindent affects pasted
	text.

2007-04-18  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (open_file): Open files using their full paths
	whenever possible, so that ~user/file.txt and "~user/file.txt"
	are treated the same way if ~user is a user's home directory.
	* files.c (real_dir_from_tilde): Simplify.
	* files.c (do_writeout): Properly display the warning in all
	cases if we try to save (a) an existing file under a different
	name, or (b) a file with no name under an existing file's name.
	* files.c (do_writeout): Rename variable different_name to
	do_warning, for clarity.
	* rcfile.c (parse_include): Open files using their full paths
	whenever possible, so that ~user/file.txt and "~user/file.txt"
	are treated the same way if ~user is a user's home directory.
	* rcfile.c (parse_include): Properly check for the included
	file's being a directory, a character file, or a block file.
	* rcfile.c (parse_include): For consistency, display the
	filename as the user entered it if we can't read the specified
	file.
	* winio.c (parse_kbinput): Interpret Cancel and Shift-Cancel.